; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testuuid.c_testuuid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testuuid.c_testuuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_uuid_parse = common dso_local global i32 0, align 4
@test_gen2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @testuuid(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32* @ADD_SUITE(i32* %3)
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @test_uuid_parse, align 4
  %7 = call i32 @abts_run_test(i32* %5, i32 %6, i32* null)
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @test_gen2, align 4
  %10 = call i32 @abts_run_test(i32* %8, i32 %9, i32* null)
  %11 = load i32*, i32** %2, align 8
  ret i32* %11
}

declare dso_local i32* @ADD_SUITE(i32*) #1

declare dso_local i32 @abts_run_test(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
